traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:25: error: illegal start of statement (no modifiers allowed here)
	override def forward(i:Int)  { 
        ^TraversalZigZag:28: error: illegal start of statement (no modifiers allowed here)
	override def forward()  {
        ^TraversalZigZag:31: error: illegal start of statement (no modifiers allowed here)
	override def backward(i:Int) {
        ^TraversalZigZag:34: error: illegal start of statement (no modifiers allowed here)
	override def backward() {
        ^TraversalZigZag:37: error: Missing closing brace `}' assumed here
}
^