traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
		var cpt:Int =0
  	var toucherMur:Boolean=false
    ecritMessage(cpt) 
    while(finalPos!=true){
      bougerPos()
  }

  def finalPos():Boolean={
    if(getX()==(getMondeLargeur-1) && getY()==(getMondeHauteur-1)){
      return true
    }
    else{
      return false
    }
  }
  def bougerPos(){
    for(i<-0 to 6){
      avance();
      seretourne();
    }
  }